--- a/live-demo/Base.lproj/Main.storyboard
+++ b/live-demo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="icz-oW-MHN">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Oyo-HH-7Ya">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -9,94 +9,113 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Live Feed Controller-->
-        <scene sceneID="8gF-vx-tgQ">
+        <!--Test View Controller-->
+        <scene sceneID="fRA-m0-W4t">
             <objects>
-                <viewController id="icz-oW-MHN" customClass="LiveFeedController" customModule="live_demo" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="NB8-vE-4RB">
+                <viewController id="Oyo-HH-7Ya" customClass="TestViewController" customModule="live_demo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ik8-Oh-ReD">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PY8-eH-C4A">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZvY-eN-kig">
                                 <rect key="frame" x="0.0" y="752" width="393" height="100"/>
                                 <subviews>
-                                    <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mYz-5f-AZn">
+                                    <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="38T-s4-VjQ">
                                         <rect key="frame" x="0.0" y="0.0" width="393" height="100"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Arb-zW-ydS">
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Sff-dh-gm0">
                                             <rect key="frame" x="0.0" y="0.0" width="393" height="100"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WWn-fN-v6h">
+                                                    <rect key="frame" x="270" y="32.666666666666629" width="107" height="35"/>
+                                                    <color key="tintColor" systemColor="systemOrangeColor"/>
+                                                    <state key="normal" title="Button"/>
+                                                    <buttonConfiguration key="configuration" style="filled" image="camera.rotate.fill" catalog="system" title="Switch"/>
+                                                    <connections>
+                                                        <action selector="onCameraSwitch:" destination="Oyo-HH-7Ya" eventType="touchUpInside" id="05Z-I1-HH3"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="WWn-fN-v6h" firstAttribute="centerY" secondItem="Sff-dh-gm0" secondAttribute="centerY" id="bGD-94-Cbn"/>
+                                                <constraint firstAttribute="trailing" secondItem="WWn-fN-v6h" secondAttribute="trailing" constant="16" id="pFm-rp-0s3"/>
+                                            </constraints>
                                         </view>
                                         <blurEffect style="systemUltraThinMaterialLight"/>
                                     </visualEffectView>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VeU-qJ-Aww" customClass="UIControl">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wcj-C1-xKB" customClass="UIControl">
                                         <rect key="frame" x="171.66666666666666" y="25" width="50" height="50"/>
                                         <color key="backgroundColor" systemColor="systemPinkColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="50" id="DaG-sj-Icu"/>
-                                            <constraint firstAttribute="height" constant="50" id="QQm-Ix-VMN"/>
+                                            <constraint firstAttribute="height" constant="50" id="4aZ-Vf-AIf"/>
+                                            <constraint firstAttribute="width" constant="50" id="Gfi-4A-GaL"/>
                                         </constraints>
                                         <connections>
-                                            <action selector="onActionTapped:" destination="icz-oW-MHN" eventType="touchUpInside" id="WRT-f1-D2P"/>
+                                            <action selector="onTap:" destination="Oyo-HH-7Ya" eventType="touchUpInside" id="Dw9-lC-6JQ"/>
                                         </connections>
                                     </view>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="mYz-5f-AZn" firstAttribute="leading" secondItem="PY8-eH-C4A" secondAttribute="leading" id="6z9-eW-DRm"/>
-                                    <constraint firstItem="VeU-qJ-Aww" firstAttribute="centerX" secondItem="PY8-eH-C4A" secondAttribute="centerX" id="Aon-hW-DwT"/>
-                                    <constraint firstItem="mYz-5f-AZn" firstAttribute="top" secondItem="PY8-eH-C4A" secondAttribute="top" id="JS8-5d-yM6"/>
-                                    <constraint firstItem="VeU-qJ-Aww" firstAttribute="centerY" secondItem="PY8-eH-C4A" secondAttribute="centerY" id="cPt-5U-hzW"/>
-                                    <constraint firstAttribute="height" constant="100" id="e5L-m8-Ifg"/>
-                                    <constraint firstAttribute="bottom" secondItem="mYz-5f-AZn" secondAttribute="bottom" id="g9m-oS-Bci"/>
-                                    <constraint firstAttribute="trailing" secondItem="mYz-5f-AZn" secondAttribute="trailing" id="ktA-kf-Aox"/>
+                                    <constraint firstAttribute="bottom" secondItem="38T-s4-VjQ" secondAttribute="bottom" id="8bD-Cd-Tnz"/>
+                                    <constraint firstItem="Wcj-C1-xKB" firstAttribute="centerX" secondItem="ZvY-eN-kig" secondAttribute="centerX" id="Hgg-p7-HOg"/>
+                                    <constraint firstAttribute="height" constant="100" id="JRM-Je-xmf"/>
+                                    <constraint firstItem="38T-s4-VjQ" firstAttribute="leading" secondItem="ZvY-eN-kig" secondAttribute="leading" id="N5R-iM-Baa"/>
+                                    <constraint firstAttribute="trailing" secondItem="38T-s4-VjQ" secondAttribute="trailing" id="Sv5-b1-SrG"/>
+                                    <constraint firstItem="Wcj-C1-xKB" firstAttribute="centerY" secondItem="ZvY-eN-kig" secondAttribute="centerY" id="je2-5r-g5i"/>
+                                    <constraint firstItem="38T-s4-VjQ" firstAttribute="top" secondItem="ZvY-eN-kig" secondAttribute="top" id="kcC-G8-l4T"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FPS:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xuG-qI-pAf">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FPS:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wyh-LY-X0p">
                                 <rect key="frame" x="342" y="75" width="35" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Audio Recording: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vye-LH-CeQ">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Audio Recording: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fn1-BR-No1">
                                 <rect key="frame" x="242" y="149" width="135" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Video Recording: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C1m-8p-sVv">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Video Recording: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gga-pg-8pa">
                                 <rect key="frame" x="242" y="112" width="135" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="kwZ-rb-V7n"/>
+                        <viewLayoutGuide key="safeArea" id="GMz-qI-FC4"/>
                         <color key="backgroundColor" systemColor="systemTealColor"/>
                         <constraints>
-                            <constraint firstItem="C1m-8p-sVv" firstAttribute="top" secondItem="xuG-qI-pAf" secondAttribute="bottom" constant="16" id="1up-RD-AEI"/>
-                            <constraint firstAttribute="bottom" secondItem="PY8-eH-C4A" secondAttribute="bottom" id="63L-AJ-wD1"/>
-                            <constraint firstItem="kwZ-rb-V7n" firstAttribute="trailing" secondItem="C1m-8p-sVv" secondAttribute="trailing" constant="16" id="9oR-hd-S2F"/>
-                            <constraint firstItem="xuG-qI-pAf" firstAttribute="top" secondItem="kwZ-rb-V7n" secondAttribute="top" constant="16" id="Dcz-JV-98b"/>
-                            <constraint firstItem="PY8-eH-C4A" firstAttribute="leading" secondItem="kwZ-rb-V7n" secondAttribute="leading" id="ELi-4g-XZd"/>
-                            <constraint firstItem="kwZ-rb-V7n" firstAttribute="trailing" secondItem="vye-LH-CeQ" secondAttribute="trailing" constant="16" id="Ieg-Dh-3oF"/>
-                            <constraint firstItem="vye-LH-CeQ" firstAttribute="top" secondItem="C1m-8p-sVv" secondAttribute="bottom" constant="16" id="TGv-Ed-OOB"/>
-                            <constraint firstItem="PY8-eH-C4A" firstAttribute="trailing" secondItem="kwZ-rb-V7n" secondAttribute="trailing" id="rLN-eM-6Kd"/>
-                            <constraint firstItem="kwZ-rb-V7n" firstAttribute="trailing" secondItem="xuG-qI-pAf" secondAttribute="trailing" constant="16" id="z4G-Tw-gSp"/>
+                            <constraint firstItem="gga-pg-8pa" firstAttribute="top" secondItem="Wyh-LY-X0p" secondAttribute="bottom" constant="16" id="1zX-Sw-HMf"/>
+                            <constraint firstItem="GMz-qI-FC4" firstAttribute="trailing" secondItem="Wyh-LY-X0p" secondAttribute="trailing" constant="16" id="5tI-Hi-hZy"/>
+                            <constraint firstItem="Wyh-LY-X0p" firstAttribute="top" secondItem="GMz-qI-FC4" secondAttribute="top" constant="16" id="Osy-8e-cn2"/>
+                            <constraint firstItem="ZvY-eN-kig" firstAttribute="leading" secondItem="GMz-qI-FC4" secondAttribute="leading" id="Qu3-wg-0TV"/>
+                            <constraint firstItem="fn1-BR-No1" firstAttribute="top" secondItem="gga-pg-8pa" secondAttribute="bottom" constant="16" id="V6T-NL-PPz"/>
+                            <constraint firstItem="ZvY-eN-kig" firstAttribute="trailing" secondItem="GMz-qI-FC4" secondAttribute="trailing" id="cFj-gR-KZa"/>
+                            <constraint firstAttribute="bottom" secondItem="ZvY-eN-kig" secondAttribute="bottom" id="fLd-Sa-u6l"/>
+                            <constraint firstItem="GMz-qI-FC4" firstAttribute="trailing" secondItem="gga-pg-8pa" secondAttribute="trailing" constant="16" id="gcN-bk-PP0"/>
+                            <constraint firstItem="GMz-qI-FC4" firstAttribute="trailing" secondItem="fn1-BR-No1" secondAttribute="trailing" constant="16" id="hsf-DC-iMT"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="actionBtn" destination="VeU-qJ-Aww" id="fkf-55-WYF"/>
-                        <outlet property="audioStsLabel" destination="vye-LH-CeQ" id="mbb-2s-x1E"/>
-                        <outlet property="fpsLabel" destination="xuG-qI-pAf" id="Cac-Rf-vGb"/>
-                        <outlet property="videoStsLabel" destination="C1m-8p-sVv" id="djm-Wo-OuB"/>
+                        <outlet property="actionBtn" destination="Wcj-C1-xKB" id="d8h-o9-ozp"/>
+                        <outlet property="audioRecLabel" destination="fn1-BR-No1" id="PCG-2z-2wy"/>
+                        <outlet property="fpsLabel" destination="Wyh-LY-X0p" id="KsY-T5-04h"/>
+                        <outlet property="videoRecLabel" destination="gga-pg-8pa" id="vRa-on-RfZ"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="KaX-5a-dqz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xFU-oT-TU5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1054.1984732824426" y="-21.126760563380284"/>
+            <point key="canvasLocation" x="411" y="-21"/>
         </scene>
     </scenes>
     <resources>
+        <image name="camera.rotate.fill" catalog="system" width="128" height="93"/>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemPinkColor">
             <color red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
